// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`modal_containers spec render delete notebooks modal 1`] = `
<EuiOverlayMask>
  <EuiModal
    initialFocus="[name=input]"
    onClose={[MockFunction]}
  >
    <EuiModalHeader>
      <EuiModalHeaderTitle>
        <EuiText
          size="s"
        >
          <h2>
            title
          </h2>
        </EuiText>
      </EuiModalHeaderTitle>
    </EuiModalHeader>
    <EuiModalBody>
      <EuiText
        size="s"
      >
        message
      </EuiText>
      <EuiText
        size="s"
      >
        The action cannot be undone.
      </EuiText>
      <EuiSpacer />
      <EuiForm>
        <EuiCompressedFormRow
          describedByIds={Array []}
          display="rowCompressed"
          fullWidth={false}
          hasChildLabel={true}
          hasEmptyLabelSpace={false}
          label="To confirm deletion, enter \\"delete\\" in the text field"
          labelType="label"
        >
          <EuiCompressedFieldText
            data-test-subj="delete-notebook-modal-input"
            name="input"
            onChange={[Function]}
            placeholder="delete"
            value=""
          />
        </EuiCompressedFormRow>
      </EuiForm>
    </EuiModalBody>
    <EuiModalFooter>
      <EuiSmallButtonEmpty
        onClick={[MockFunction]}
      >
        Cancel
      </EuiSmallButtonEmpty>
      <EuiSmallButton
        color="danger"
        data-test-subj="delete-notebook-modal-delete-button"
        disabled={true}
        fill={true}
        onClick={[Function]}
      >
        Delete
      </EuiSmallButton>
    </EuiModalFooter>
  </EuiModal>
</EuiOverlayMask>
`;

exports[`modal_containers spec render get clone modal 1`] = `""`;

exports[`modal_containers spec render get custom modal 1`] = `
<EuiOverlayMask>
  <EuiModal
    initialFocus="[name=input]"
    onClose={[MockFunction]}
  >
    <EuiModalHeader>
      <EuiModalHeaderTitle>
        <EuiText
          size="s"
        >
          <h2>
            title
          </h2>
        </EuiText>
      </EuiModalHeaderTitle>
    </EuiModalHeader>
    <EuiModalBody>
      <EuiForm>
        <EuiCompressedFormRow
          describedByIds={Array []}
          display="rowCompressed"
          fullWidth={false}
          hasChildLabel={true}
          hasEmptyLabelSpace={false}
          helpText="help text"
          label="label"
          labelType="label"
        >
          <EuiCompressedFieldText
            data-test-subj="custom-input-modal-input"
            name="input"
            onChange={[Function]}
            value="mock-path"
          />
        </EuiCompressedFormRow>
      </EuiForm>
    </EuiModalBody>
    <EuiModalFooter>
      <EuiSmallButtonEmpty
        onClick={[MockFunction]}
      >
        Cancel
      </EuiSmallButtonEmpty>
      <EuiSmallButton
        data-test-subj="custom-input-modal-confirm-button"
        fill={true}
        onClick={[Function]}
      >
        Confirm
      </EuiSmallButton>
    </EuiModalFooter>
  </EuiModal>
</EuiOverlayMask>
`;

exports[`modal_containers spec render get delete modal 1`] = `""`;

exports[`modal_containers spec render get delete modal 2`] = `""`;

exports[`modal_containers spec render get sample notebooks modal 1`] = `""`;
